# entropy

./: .gitignore  LICENSE  Make-Matlab-def  Make-config  Makefile  Makefile.in  README.md  config.guess  config.h.in  config.sub  configure  configure.ac
include/: ANN_wrapper.h  entropy_Gaussian.h  entropy_Gaussian_combinations.h  entropy_Gaussian_single.h  entropy_ann.h  entropy_ann_2d.h  entropy_ann_N.h  entropy_ann_Renyi.h  entropy_ann_combinations.h  entropy_ann_mask.h  entropy_ann_single_MI.h  entropy_ann_single_PMI.h  entropy_ann_single_RE.h  entropy_ann_single_entropy.h  entropy_ann_threads.h  entropy_ann_threads_MI.h  entropy_ann_threads_PMI.h  entropy_ann_threads_RE.h  entropy_ann_threads_Renyi.h  entropy_ann_threads_entropy.h  entropy_nns.h  entropy_others.h  library_commons.h  library_matlab.h  mask.h  math_tools.h  math_tools_nd.h  nns_count.h  samplings.h  surrogates.h
notes/: 2026-02-19.md  methods_report_entropy_robustness.md  robustness_table.md  robustness_table.tex
paper/: entropy_validation.tex  references.bib  references_robustness.bib  robustness_paper.tex
src/: ANN_wrapper.cpp  Makefile  Makefile.in  entropy_Gaussian.c  entropy_Gaussian_combinations.c  entropy_Gaussian_single.c  entropy_ann.c  entropy_ann_2d.c  entropy_ann_N.c  entropy_ann_Renyi.c  entropy_ann_combinations.c  entropy_ann_mask.c  entropy_ann_single_MI.c  entropy_ann_single_PMI.c  entropy_ann_single_RE.c  entropy_ann_single_entropy.c  entropy_ann_threads.c  entropy_ann_threads_MI.c  entropy_ann_threads_PMI.c  entropy_ann_threads_RE.c  entropy_ann_threads_Renyi.c  entropy_ann_threads_entropy.c  entropy_others.c  library_commons.c  main.c  mask.c  math_tools.c  math_tools_nd.c  nns_count.c  samplings.c  samplings_basic.c  surrogates.c  verbosity.c
src/cython/: pyproject.toml  setup.py
src/cython/entropy/: __init__.py  commons.pxd  commons.pyx  computes.pxd  computes.pyx  entropy.pyx  masks.py  others.pxd  others.pyx  tools.pxd  tools.py  tools.pyx
src/entropy_pure/: README.md  __init__.py  benchmark_rr.py  commons.py  core.py  core_optimized.py  masks.py  others.py  pyproject.toml  setup.py  test_entropy.py  tools.py
src/matlab/: Make-Matlab  Makefile.in  compute_ApEn.c  compute_DI.c  compute_KC.c  compute_MI.c  compute_PMI.c  compute_PTE.c  set_ANN.c  (+16 more)
(+3 files in other folders)
